Moved items and skills definitions to JSON files.
This change is to better separate the static data from the code. The
functionality remains the same.

--- a/js/.jshintrc
+++ b/js/.jshintrc
@@ -20,9 +20,7 @@
 	"globals": {
 		"EventEmitter": true,
 		"Character": true,
-		"items": true,
-		"skills": true,
-		"qualifications": true,
+		"Qualifications": true,
 		"MemberLoader": true,
 		"MemberTableBuilder": true
 	}
