--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"devDependencies": {
 		"grunt": "~0.4",
 		"grunt-contrib-jshint": "~0.10",
-		"grunt-contrib-csslint": "~0.2"
+		"grunt-contrib-csslint": "~0.2",
+		"grunt-jscs-checker": "~0.4"
 	}
 }
