Completely redesigned UX, UI, behavior, and requirements.
Major refactor to support new UI designed around single-user lookups
that are informative to individual players. New rank structure and
requirements.

--- a/js/.jshintrc
+++ b/js/.jshintrc
@@ -20,9 +20,11 @@
 
 	"globals": {
 		"Character": true,
-		"EventEmitter": true,
+		"Service": true,
+		"ItemLoader": true,
+		"OutfitLoader": true,
 		"MemberLoader": true,
-		"MemberTableBuilder": true,
+		"MemberReportBuilder": true,
 		"Qualifications": true
 	}
 }
