--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
 		"grunt": "~0.4",
 		"grunt-contrib-jshint": "~0.10",
 		"grunt-contrib-csslint": "~0.2",
+		"grunt-contrib-clean": "~0.5",
+		"grunt-contrib-copy": "~0.5",
+		"grunt-contrib-uglify": "~0.5",
+		"grunt-contrib-cssmin": "~0.10",
+		"grunt-contrib-htmlmin": "~0.3",
 		"grunt-jscs-checker": "~0.5",
-		"grunt-jsonlint": "~1.0"
+		"grunt-jsonlint": "~1.0",
+		"grunt-jsonmin": "~0.2",
+		"grunt-smushit": "~1.3"
 	}
 }
