--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"grunt-jscs": "~0.6",
 		"grunt-jsonlint": "~1.0",
 		"grunt-jsonmin": "~0.2",
-		"grunt-smushit": "~1.3"
+		"grunt-smushit": "~1.3",
+		"grunt-shell": "~0.7"
 	}
 }
